--- a/VB/CustomShowDataExample/CustomShowDataExample.vbproj
+++ b/VB/CustomShowDataExample/CustomShowDataExample.vbproj
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
@@ -9,7 +9,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace></RootNamespace>
     <AssemblyName>CustomShowDataExample</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
     <OptionExplicit>On</OptionExplicit>
@@ -27,6 +27,7 @@
     <DefineTrace>true</DefineTrace>
     <ErrorReport>prompt</ErrorReport>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -36,7 +37,57 @@
     <DefineDebug>false</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <ErrorReport>prompt</ErrorReport>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <ItemGroup>
+    <Reference Include="DevExpress.BonusSkins.v18.2" />
+    <Reference Include="DevExpress.Charts.v18.2.Core" />
+    <Reference Include="DevExpress.Dashboard.v18.2.Core" />
+    <Reference Include="DevExpress.Dashboard.v18.2.Win" />
+    <Reference Include="DevExpress.Data.v18.2" />
+    <Reference Include="DevExpress.DataAccess.v18.2" />
+    <Reference Include="DevExpress.DataAccess.v18.2.UI" />
+    <Reference Include="DevExpress.Map.v18.2.Core" />
+    <Reference Include="DevExpress.Office.v18.2.Core" />
+    <Reference Include="DevExpress.PivotGrid.v18.2.Core" />
+    <Reference Include="DevExpress.Printing.v18.2.Core" />
+    <Reference Include="DevExpress.RichEdit.v18.2.Core" />
+    <Reference Include="DevExpress.Sparkline.v18.2.Core" />
+    <Reference Include="DevExpress.TreeMap.v18.2.Core" />
+    <Reference Include="DevExpress.Utils.v18.2" />
+    <Reference Include="DevExpress.Utils.v18.2.UI" />
+    <Reference Include="DevExpress.Xpo.v18.2" />
+    <Reference Include="DevExpress.XtraBars.v18.2" />
+    <Reference Include="DevExpress.XtraCharts.v18.2" />
+    <Reference Include="DevExpress.XtraCharts.v18.2.UI" />
+    <Reference Include="DevExpress.XtraCharts.v18.2.Wizard" />
+    <Reference Include="DevExpress.XtraEditors.v18.2" />
+    <Reference Include="DevExpress.XtraGauges.v18.2.Core" />
+    <Reference Include="DevExpress.XtraGauges.v18.2.Presets" />
+    <Reference Include="DevExpress.XtraGauges.v18.2.Win" />
+    <Reference Include="DevExpress.XtraGrid.v18.2" />
+    <Reference Include="DevExpress.XtraLayout.v18.2" />
+    <Reference Include="DevExpress.XtraMap.v18.2" />
+    <Reference Include="DevExpress.XtraPivotGrid.v18.2" />
+    <Reference Include="DevExpress.XtraPrinting.v18.2" />
+    <Reference Include="DevExpress.CodeParser.v18.2" />
+    <Reference Include="DevExpress.XtraReports.v18.2.Extensions" />
+    <Reference Include="DevExpress.XtraReports.v18.2" />
+    <Reference Include="DevExpress.XtraRichEdit.v18.2" />
+    <Reference Include="DevExpress.XtraRichEdit.v18.2.Extensions" />
+    <Reference Include="DevExpress.XtraTreeList.v18.2" />
+    <Reference Include="DevExpress.XtraTreeMap.v18.2" />
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
+  </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
     <Import Include="System.Collections.Generic" />
@@ -48,55 +99,6 @@
     <Import Include="System.Drawing" />
     <Import Include="System.Windows.Forms" />
     <Import Include="System" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="DevExpress.BonusSkins.v18.1" />
-    <Reference Include="DevExpress.Charts.v18.1.Core" />
-    <Reference Include="DevExpress.Dashboard.v18.1.Core" />
-    <Reference Include="DevExpress.Dashboard.v18.1.Win" />
-    <Reference Include="DevExpress.Data.v18.1" />
-    <Reference Include="DevExpress.DataAccess.v18.1" />
-    <Reference Include="DevExpress.DataAccess.v18.1.UI" />
-    <Reference Include="DevExpress.Map.v18.1.Core" />
-    <Reference Include="DevExpress.Office.v18.1.Core" />
-    <Reference Include="DevExpress.PivotGrid.v18.1.Core" />
-    <Reference Include="DevExpress.Printing.v18.1.Core" />
-    <Reference Include="DevExpress.RichEdit.v18.1.Core" />
-    <Reference Include="DevExpress.Sparkline.v18.1.Core" />
-    <Reference Include="DevExpress.TreeMap.v18.1.Core" />
-    <Reference Include="DevExpress.Utils.v18.1" />
-    <Reference Include="DevExpress.Utils.v18.1.UI" />
-    <Reference Include="DevExpress.Xpo.v18.1" />
-    <Reference Include="DevExpress.XtraBars.v18.1" />
-    <Reference Include="DevExpress.XtraCharts.v18.1" />
-    <Reference Include="DevExpress.XtraCharts.v18.1.UI" />
-    <Reference Include="DevExpress.XtraCharts.v18.1.Wizard" />
-    <Reference Include="DevExpress.XtraEditors.v18.1" />
-    <Reference Include="DevExpress.XtraGauges.v18.1.Core" />
-    <Reference Include="DevExpress.XtraGauges.v18.1.Presets" />
-    <Reference Include="DevExpress.XtraGauges.v18.1.Win" />
-    <Reference Include="DevExpress.XtraGrid.v18.1" />
-    <Reference Include="DevExpress.XtraLayout.v18.1" />
-    <Reference Include="DevExpress.XtraMap.v18.1" />
-    <Reference Include="DevExpress.XtraPivotGrid.v18.1" />
-    <Reference Include="DevExpress.XtraPrinting.v18.1" />
-    <Reference Include="DevExpress.CodeParser.v18.1" />
-    <Reference Include="DevExpress.XtraReports.v18.1.Extensions" />
-    <Reference Include="DevExpress.XtraReports.v18.1" />
-    <Reference Include="DevExpress.XtraRichEdit.v18.1" />
-    <Reference Include="DevExpress.XtraRichEdit.v18.1.Extensions" />
-    <Reference Include="DevExpress.XtraTreeList.v18.1" />
-    <Reference Include="DevExpress.XtraTreeMap.v18.1" />
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DesignerForm1.vb">
